@@ -11,7 +11,7 @@ int ACE_TMAIN (int, ACE_TCHAR *argv[])
   ACE_HANDLE srcHandle = ACE_OS::open (argv[1], O_RDONLY);
   ACE_ASSERT(srcHandle != ACE_INVALID_HANDLE);
 
-  ACE_Mem_Map srcMap (srcHandle, -1, PROT_READ, ACE_MAP_PRIVATE);
+  ACE_Mem_Map srcMap (srcHandle, static_cast<size_t> (-1), PROT_READ, ACE_MAP_PRIVATE);
   ACE_ASSERT(srcMap.addr () != 0);
 
   ACE_Mem_Map destMap (argv[2],
